# mtech-ai

./: README.md
ml_assessment2/: G24AIT099_G24AIT047_G24AIT003.py  generate_pdf.py  main.ipynb  pyproject.toml
